# ciphr

./: .all-contributorsrc  .gitignore  Cargo.toml  README.md  deny.toml  devbox.json  justfile  release-plz.toml
.cursor/rules/: changelog_manager.mdc  feature_workflow.mdc  main.mdc  project_structure.mdc  rust_standards.mdc
.githooks/: commit-msg  pre-commit  pre-push
.github/: labeler.yml  pull_request_template.md
.github/workflows/: ci.yml  docs.yml  labeler.yml  release.yml  security.yml  welcome.yml
crates/cli/: Cargo.toml
crates/cli/src/: health.rs  main.rs
crates/config/: Cargo.toml
crates/config/benches/: config_bench.rs
crates/config/src/: builder.rs  errors.rs  layers.rs  lib.rs  loader.rs  traits.rs  types.rs
crates/dev-env/: Cargo.toml
crates/feature-flags/: Cargo.toml
crates/feature-flags/src/: evaluator.rs  lib.rs  manager.rs  strategies.rs
crates/feature-flags/tests/: strategies.rs
crates/logging/: Cargo.toml
crates/logging/src/: context.rs  errors.rs  formatters.rs  init.rs  lib.rs
crates/logging/tests/: json_logging.rs
crates/monitoring/: Cargo.toml
crates/monitoring/src/: lib.rs  mocks.rs  traits.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: harness.rs  lib.rs  mock_fs.rs  property.rs
docs/: architecture.md  contributing.md  environment-setup.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  introduction.md
docs/book/src/architecture/: adrs.md  crates.md  overview.md
docs/book/src/community/: code-of-conduct.md  contributing.md  reporting-vulnerabilities.md
docs/book/src/guide/: configuration.md  development-workflow.md  feature-flags.md  getting-started.md  troubleshooting.md  windows-setup.md
docs/book/src/operations/: ci-cd.md  monitoring.md  performance.md  releases.md  security.md
docs/decisions/: adr-001-devbox.md  adr-002-feature-flags.md  adr-003-rust-and-logging.md  adr-004-just-task-runner.md  adr-005-config-management.md
implementation/: changelog.md
implementation/features/1.1-dev-env-setup/: outro.md  tasks.md
implementation/features/archive/1.1-dev-env-setup/: design.md  new-community-contributor.md  tasks.md
scripts/: validate-environment.sh
