[workspace]
members = [
    "crates/cli",
    "crates/config",
    "crates/dev-env",
    "crates/feature-flags",
    "crates/logging",
    "crates/test-utils"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ciphr Team <contact@ciphr.dev>"]
license = "MIT"
repository = "https://github.com/ciphr-dev/ciphr"
description = "Open-source accounting platform"

[workspace.dependencies]
# Add common dependencies here
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
rand = "0.8"
uuid = { version = "1.8", features = ["v4"] }