[workspace]
members = [
    "crates/cli",
    "crates/config",
    "crates/dev-env",
    "crates/feature-flags",
    "crates/logging", "crates/monitoring",
    "crates/test-utils"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ciphr Team <contact@ciphr.dev>"]
license = "MIT"
repository = "https://github.com/ciphr-dev/ciphr"
description = "Open-source accounting platform"
rust-version = "1.78.0"
bench = false

[workspace.dependencies]
# Add common dependencies here
anyhow = "1.0.86"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.23"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
thiserror = "1.0.61"
rand = "0.8"
uuid = { version = "1.8.0", features = ["v4"] }
tempfile = "3.10.1"

[workspace.lints.rust]
