[package]
name = "config"
description = "Configuration management for the Ciphr platform."

# Inherit metadata from the root Cargo.toml
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Inherit dependencies from the root Cargo.toml
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
