[package]
name = "config"
description = "Configuration management for the Ciphr platform."

# Inherit metadata from the root Cargo.toml
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
# Inherit dependencies from the root Cargo.toml
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = "0.5.1"

[[bench]]
name = "config_bench"
harness = false
