[package]
name = "feature-flags"
description = "Feature flag management for the Ciphr platform."

# Inherit metadata from the root Cargo.toml
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
config = { path = "../config" }
rand = { workspace = true }
uuid = { workspace = true }
