[package]
name = "logging"
description = "Logging and tracing setup for the Ciphr platform."

# Inherit metadata from the root Cargo.toml
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
config = { path = "../config" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
