[package]
name = "test-utils"
description = "Shared testing utilities for the Ciphr platform."

# Inherit metadata from the root Cargo.toml
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tempfile = { workspace = true }
